# CCS2026

./: .envrc  .gitignore  .gitlab-ci.yml  Cargo.toml  GEMINI.md  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
crates/: .gitignore
crates/cryptovampire/: Cargo.toml
crates/cryptovampire/src/: cli.rs  cv_utils.rs  lib.rs  main.rs  return_value.rs
crates/cryptovampire/src/container/: allocator.rs  contained.rs  container.rs  reference.rs  utils.rs
crates/cryptovampire/src/environement/: environement.rs
crates/cryptovampire/src/error/: anywhere.rs  error.rs  macros.rs  mod.rs  result.rs
crates/cryptovampire/src/formula/: quantifier.rs  variable.rs
crates/cryptovampire/src/parser/: mod.rs
crates/cryptovampire/src/problem/: generator.rs  protocol.rs  step.rs
crates/cryptovampire/src/runner/: error.rs  runner.rs  runner_helper.rs  runners.rs  searcher.rs  tptp.rs  vampire.rs  z3.rs
crates/cryptovampire/src/smt/: mod.rs  smt.rs
crates/cryptovampire_macros/: Cargo.toml
crates/cryptovampire_macros/src/: indistinguishability.rs  lib.rs  with_location.rs
crates/cryptovampire_smt/: Cargo.toml
crates/cryptovampire_smt/src/: formula.rs  lib.rs  smt.rs
crates/cryptovampire_smt/src/formatter/: leftovers.rs  mod.rs  parser.rs  printing.rs  tests.rs  translation.rs
crates/egg/: Cargo.toml  README.md
crates/egg/src/: dot.rs  egraph.rs  explain.rs  extract.rs  language.rs  lib.rs  machine.rs  macros.rs  multipattern.rs  pattern.rs  rewrite.rs  run.rs  subst.rs  test.rs  unionfind.rs  util.rs
crates/golgge/: Cargo.toml
crates/golgge/src/: analysis.rs  config.rs  lib.rs  program.rs  proof.rs  simplify_and.rs  weight.rs
crates/indistinguishability/: .gitignore  Cargo.toml
crates/indistinguishability/src/: cli.rs  configuration.rs  lib.rs  main.rs
crates/indistinguishability/tests/: intergration_test.rs  playground.scm  save-results.scm
crates/logic_formula/: Cargo.toml
crates/logic_formula/src/: desctucted.rs  egg.rs  head.rs  iterators.rs  lib.rs  traits.rs
crates/quarck/: Cargo.toml
crates/quarck/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: all_or_one.rs  arc_into_iter.rs  enum_utils.rs  ereturn.rs  impossible.rs  lib.rs  maybe_owned.rs  monad.rs  ord_util.rs  string_ref.rs  traits.rs  transposer.rs  utils.rs  vecref.rs
experimental/failing/: euf_key_secrecy-no-lemma.ptcl
nix/: check.nix  commun.nix  shell.nix
(+268 files in other folders)
