[workspace]
members = [
  "crates/cryptovampire",
  "crates/utils",
  "crates/logic_formula",
  "crates/cryptovampire_macros",
  "crates/indistinguishability",
  "crates/golgge",
  "crates/cryptovampire_smt",
  "crates/quarck"
]
resolver = "2"
default-members = ["crates/indistinguishability"]

[workspace.dependencies]
itertools = "0.13"
if_chain = "1.0.2"
hashbrown = "0.15"
log = { version = "0.4", features = ["release_max_level_warn"] }
static_init = "1.0"
paste = "1.0"
thiserror = "2.0"
macro-attr = "0.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.20"
bitflags = "2.9"
smallvec = {version = "1.15.0", features = ["union", "const_generics", "serde", "const_new"]}
env_logger = "0.11"
tempfile = "3.10"
which = "8.0.0"
bon = "3.6.4"
clap = { version = "4", features = ["derive"] }
clap_complete = "4.5"
steel-core = { git = "https://github.com/mattwparas/steel/", rev = "715dd6ddca50a5409bc50b9229afcbf93e0d1b71", features = ["custom-hash"]}
steel-derive = { git = "https://github.com/mattwparas/steel/", rev = "715dd6ddca50a5409bc50b9229afcbf93e0d1b71"}
steel-repl = { git = "https://github.com/mattwparas/steel/", rev = "715dd6ddca50a5409bc50b9229afcbf93e0d1b71"}

[workspace.lints.rust]
elided_lifetimes_in_paths = "deny"

[profile.profiling]
inherits = "release"
debug = true

[profile.debug-optimized]
inherits = "dev"  # Inherits from the default dev profile
opt-level = 3    # Enables full optimizations
debug = true     # Includes debug symbols
debug-assertions = true  # Enables debug assertions
overflow-checks = true    # Enables overflow checks