[package]
name = "cryptovampire_smt"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
utils = { path = "../utils"}
logic_formula = {path = "../logic_formula"}
cryptovampire_macros = {path = "../cryptovampire_macros", optional = true}

log.workspace = true
env_logger.workspace = true
itertools.workspace = true
serde = { workspace = true, optional = true}
regex = {version = "1.11.1", optional = true}

[features]
serde = ["utils/serde", "dep:serde"]
cryptovampire = ["vampire"]
vampire = []
macro = ["dep:cryptovampire_macros"]
smt-parsing = ["dep:regex"]

[dev-dependencies]
cryptovampire_macros = {path = "../cryptovampire_macros"}
